argocd/dev/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-prisma
  namespace: dev
  labels:
    app: prisma
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prisma
      tier: frontend
  template:
    metadata:
      name: frontend-prisma
      labels:
        app: prisma
        tier: frontend
    spec:
      containers:
        - name: frontend-prisma
          image: jensdl/frontend:dev.v22.11.30-12h07m
          imagePullPolicy: Always
          ports:
            - containerPort: 80
