argocd/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-prisma-service
  namespace: dev
  labels:
    app: prisma
    tier: frontend
spec:
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
  selector:
    app: prisma
    tier: frontend
