argocd/dev/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: dev.prisma.orcraft.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-prisma-service
                port:
                  number: 4200
  tls:
    - hosts:
        - dev.prisma.orcraft.net
      secretName: dev.prisma-tls
